feat: add header section

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -10,9 +10,38 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../assets/styles/normalize.css">
+    <link rel="stylesheet" href="../../assets/styles/normalize.css" />
+    <link rel="stylesheet" href="../../assets/styles/variables.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Online-zoo</title>
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="header__logo" href="#"></a>
+          <nav class="header__navbar navbar">
+            <ul class="navbar__items">
+              <li class="navbar__item">
+                <a class="navbar__link navbar__link--active" href="#">About</a>
+              </li>
+              <li class="navbar__item">
+                <a class="navbar__link" href="#">Map</a>
+              </li>
+              <li class="navbar__item">
+                <a class="navbar__link" href="#">Zoos</a>
+              </li>
+              <li class="navbar__item">
+                <a class="navbar__link" href="#">Donate</a>
+              </li>
+              <li class="navbar__item">
+                <a class="navbar__link" href="#">Contact us</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="navbar__copy">Designed by ©</div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
