feat: add favorite section

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -43,5 +43,19 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <section class="favorite">
+        <div class="container">
+          <div class="favorite__inner">
+            <div class="favorit__bcg-circle"></div>
+            <h1 class="favorite__title">
+              Watch your <span>favorite</span> animal online
+            </h1>
+            <button class="button favorite__btn">watch online</button>
+          </div>
+        </div>
+      </section>
+    </main>  position: relative;
   </body>
 </html>
