--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -56,6 +56,37 @@
           </div>
         </div>
       </section>
-    </main>  position: relative;
+
+      <section class="backstage">
+        <div class="container">
+          <div class="backstage__inner">
+            <img
+              class="backstage__img"
+              src="../../assets/images/backstage/backstage-logo.png"
+              alt=""
+            />
+            <div class="backstage__info">
+              <h2 class="backstage__info-title">
+                The Backstage of the Wilderness World.
+              </h2>
+              <p class="backstage__info-text">
+                The site was founded on the basis of a volunteer movement to
+                protect and care for animals.
+              </p>
+              <h3 class="backstage__info-subtitle">How it works</h3>
+              <p class="backstage__info-text">
+                The main goal is to help the animals, as well as the nature
+                reserves and zoos where they are kept. We are currently working
+                on video projects targeting pandas in China, eagles on an island
+                near Los Angeles, alligators in Florida and gorillas in the
+                Congo. These have a total of more than 1,500 mammals and
+                reptiles.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="backstage__flowers"></div>
+      </section>
+    </main>
   </body>
 </html>
