feat: add pets section

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -63,7 +63,7 @@
             <img
               class="backstage__img"
               src="../../assets/images/backstage/backstage-logo.png"
-              alt=""
+              alt="backstage-img"
             />
             <div class="backstage__info">
               <h2 class="backstage__info-title">
@@ -86,6 +86,110 @@
           </div>
         </div>
         <div class="backstage__flowers"></div>
+      </section>
+
+      <section class="pets">
+        <div class="container">
+          <div class="pets__slider pets-slider">
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-1.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  alt="slider-icon"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-2.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/meet-fish_icon.svg"
+                  alt="slider-icon"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-3.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  alt="slider-icon"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-4.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  alt="slider-img"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-5.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  alt="slider-img"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+            <div class="pets-slider__item slider-item">
+              <img
+                class="slider-item__img"
+                src="../../assets/images/pets/pets-img-6.png"
+                alt="slider-img"
+              />
+              <div class="slider-item__inner">
+                <h4 class="slider-item__title">giant Pandas</h4>
+                <img
+                  class="slider-item__icon"
+                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  alt="slider-img"
+                />
+                <p class="slider-item__text">Native to Southwest China</p>
+              </div>
+            </div>
+          </div>
+          <button class="pets__button button">Choose your favorite</button>
+        </div>
       </section>
     </main>
   </body>
