feat: add slider-arrow and flowers in pets section

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -91,6 +91,8 @@
       <section class="pets">
         <div class="container">
           <div class="pets__slider pets-slider">
+            <div class="pets-slider__arrow arrow-left"></div>
+            <div class="pets-slider__arrow arrow-right"></div>
             <div class="pets-slider__item slider-item">
               <img
                 class="slider-item__img"
