feat: add how-it-works section

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -167,7 +167,7 @@
                 <h4 class="slider-item__title">giant Pandas</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  src="../../assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
                 <p class="slider-item__text">Native to Southwest China</p>
@@ -183,7 +183,7 @@
                 <h4 class="slider-item__title">giant Pandas</h4>
                 <img
                   class="slider-item__icon"
-                  src="../../assets/icons/pets/banana-bamboo_icon.svg"
+                  src="../../assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
                 <p class="slider-item__text">Native to Southwest China</p>
@@ -193,6 +193,29 @@
           <button class="pets__button button">Choose your favorite</button>
         </div>
       </section>
+
+      <section class="how-it-works">
+        <div class="container">
+          <h2 class="how-it-works__title">Pick and feed a friend</h2>
+          <h4 class="how-it-works__subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+          <p class="how-it-works__text">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+          <p class="how-it-works__description">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our 
+            <a class="how-it-works__description-link" href="#">Emergency Support Fund.</a>
+          </p>
+          <div class="how-it-works__widgets">
+            <h2 class="how-it-works__widgets-title widgets-title">How it works</h2>
+            <div class="widgets">
+              <img class="widget-card" src="../../assets/icons/how-it-works/widget-card.svg" alt="widget-card"></img>
+              <img class="widget-arrow" src="../../assets/icons/how-it-works/widget-arrow.svg" alt="widget-arrow">
+              <img class="widget-payment" src="../../assets/icons/how-it-works/widget-payment.svg" alt="widget-payment"></img>
+              <img class="widget-arrow" src="../../assets/icons/how-it-works/widget-arrow.svg" alt="widget-arrow">
+              <img class="widget-result" src="../../assets/icons/how-it-works/widget-result.svg" alt="widget-result"></img>
+            </div>
+          </div>
+          <div class="how-it-works__button button">Feed a Freind Now</div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
