feat: add testimonials and footer sections

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a class="header__logo" href="#"></a>
+          <a class="header__logo logo" href="#">PetStory online</a>
           <nav class="header__navbar navbar">
             <ul class="navbar__items">
               <li class="navbar__item">
@@ -197,25 +197,221 @@
       <section class="how-it-works">
         <div class="container">
           <h2 class="how-it-works__title">Pick and feed a friend</h2>
-          <h4 class="how-it-works__subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
-          <p class="how-it-works__text">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-          <p class="how-it-works__description">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our 
-            <a class="how-it-works__description-link" href="#">Emergency Support Fund.</a>
+          <h4 class="how-it-works__subtitle">
+            We know the animals bring you joy, and in these extraordinary times,
+            we’re glad.
+          </h4>
+          <p class="how-it-works__text">
+            During a time when the COVID-19 epidemic is touching all of our
+            lives, we’re proud and glad that people around the world find joy in
+            PetStory.
+          </p>
+          <p class="how-it-works__description">
+            Even though the zoo has reopened, we need you now more than ever to
+            help us deal with these problems. Please consider a gift to our
+            <a class="how-it-works__description-link" href="#"
+              >Emergency Support Fund.</a
+            >
           </p>
           <div class="how-it-works__widgets">
-            <h2 class="how-it-works__widgets-title widgets-title">How it works</h2>
+            <h2 class="how-it-works__widgets-title widgets-title">
+              How it works
+            </h2>
             <div class="widgets">
-              <img class="widget-card" src="../../assets/icons/how-it-works/widget-card.svg" alt="widget-card"></img>
-              <img class="widget-arrow" src="../../assets/icons/how-it-works/widget-arrow.svg" alt="widget-arrow">
-              <img class="widget-payment" src="../../assets/icons/how-it-works/widget-payment.svg" alt="widget-payment"></img>
-              <img class="widget-arrow" src="../../assets/icons/how-it-works/widget-arrow.svg" alt="widget-arrow">
-              <img class="widget-result" src="../../assets/icons/how-it-works/widget-result.svg" alt="widget-result"></img>
+              <img
+                class="widget-card"
+                src="../../assets/icons/how-it-works/widget-card.svg"
+                alt="widget-card"
+              />
+              <img
+                class="widget-arrow"
+                src="../../assets/icons/how-it-works/widget-arrow.svg"
+                alt="widget-arrow"
+              />
+              <img
+                class="widget-payment"
+                src="../../assets/icons/how-it-works/widget-payment.svg"
+                alt="widget-payment"
+              />
+              <img
+                class="widget-arrow"
+                src="../../assets/icons/how-it-works/widget-arrow.svg"
+                alt="widget-arrow"
+              />
+              <img
+                class="widget-result"
+                src="../../assets/icons/how-it-works/widget-result.svg"
+                alt="widget-result"
+              />
             </div>
           </div>
           <div class="how-it-works__button button">Feed a Freind Now</div>
         </div>
       </section>
 
+      <section class="testimonials">
+        <div class="container">
+          <h2 class="testimonials__title">Testimonials</h2>
+          <div class="testimonials__inner">
+            <div class="testimonials__item">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="../../assets/icons/testemonials/item-user-icon-1.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Michael John</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Today </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  The best online zoo I’ve met. My son delighted very much ljves
+                  to watch gouillas. Online zoo is one jf the ways to instill a
+                  love for animals.The best online zoo I’ve met. My son
+                  delighted very much ljves to watch gouillas. Online zoo is one
+                  jf the ways to instill a love for animals. The best online zoo
+                  I’ve met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonials__item">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="../../assets/icons/testemonials/item-user-icon-2.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Oska Samborska</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.The best online zoo I’ve met. My
+                  son delighted very much ljves to watch gouillas. The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonials__item">
+              <div class="testimonials__item-wrapper">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="../../assets/icons/testemonials/item-user-icon-4.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Fredericka Michelin</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  My son delighted very much ljves to watch gouillas. Online zoo
+                  is one jf the ways to instill a love for animals.The best
+                  online zoo I’ve met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. The best online zoo Ive
+                  met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <div class="testimonials__item">
+                <div class="testimonials__item-user item-user">
+                  <img
+                    class="item-user__icon"
+                    src="../../assets/icons/testemonials/item-user-icon-3.svg"
+                    alt="item-user-icon"
+                  />
+                  <div class="item-user__name">Oskar Samborsky</div>
+                  <div class="item-user__location">
+                    Local Austria
+                    <span class="item-user__date"> Yesterday </span>
+                  </div>
+                </div>
+                <p class="testimonials__item-text">
+                  Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals.The best online zoo I’ve met. My
+                  son delighted very much ljves to watch gouillas. The best
+                  online zoo Ive met. My son delighted very much ljves to watch
+                  gouillas. Online zoo is one jf the ways to instill a love for
+                  animals.The best online zoo I’ve met. My son delighted very
+                  much ljves to watch gouillas. Online zoo is one jf the ways to
+                  instill a love for animals. best online zoo Ive met. My son
+                  delighted very much ljves to watch gouillas. Online zoo is one
+                  jf the ways to instill a love for animals.The best online zoo
+                  I’ve met. My son delighted very much ljves to watch gouillas.
+                  Online zoo is one jf the ways to instill a love for animals.
+                </p>
+              </div>
+            </div>
+            <input class="testimonials__input" type="range">
+            <button class="testemonials__button button button-secondary">leave feedback</button>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <h2 class="foote__logo logo">PetStory online</h2>
+          <form class="footer__form footer-form" action="submit">
+            <div class="footer-form__title">Subscribe to our news</div>
+            <input class="footer-form__input" type="email" placeholder="Enter your email">
+            <button class="footer-form__button">Submit</button>
+          </form>
+        </div>
+        <button class="footer__button button button-secondary">donate for volunteers</button>
+        <div class="footer__inner footer-inner">
+          <div class="footer-inner__contacts footer-contacts">
+            <a class="footer-contacts__link facebook" href="#">Facebook</a>
+            <a class="footer-contacts__link twitter" href="#">Twitter</a>
+            <a class="footer-contacts__link instagram" href="#">Instagram</a>
+            <a class="footer-contacts__link youtube" href="#">YouTube</a>
+          </div>
+          <nav class="footer__inner-navbar footer-navbar">
+            <ul class="footer-navbar__items">
+              <li class="footer-navbar__item">
+                <a class="foote-navbar__link" href="#">About</a>
+              </li>
+              <li class="footer-navbar__item">
+                <a class="foote-navbar__link" href="#">Map</a>
+              </li>
+              <li class="footer-navbar__item">
+                <a class="foote-navbar__link" href="#">Zoos</a>
+              </li>
+              <li class="footer-navbar__item">
+                <a class="foote-navbar__link" href="#">Contact us</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer-inner__copy footer-copy">Designed by Alisa Samborskaya <br>©RSSchool & ©Yem Digital 2021</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
