feat: add testemonials and footer sections

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -69,12 +69,12 @@
               <h2 class="backstage__info-title">
                 The Backstage of the Wilderness World.
               </h2>
-              <p class="backstage__info-text">
+              <p class="backstage__info-title-text">
                 The site was founded on the basis of a volunteer movement to
                 protect and care for animals.
               </p>
               <h3 class="backstage__info-subtitle">How it works</h3>
-              <p class="backstage__info-text">
+              <p class="backstage__info-subtitle-text">
                 The main goal is to help the animals, as well as the nature
                 reserves and zoos where they are kept. We are currently working
                 on video projects targeting pandas in China, eagles on an island
@@ -116,13 +116,13 @@
                 alt="slider-img"
               />
               <div class="slider-item__inner">
-                <h4 class="slider-item__title">giant Pandas</h4>
+                <h4 class="slider-item__title">Eagles</h4>
                 <img
                   class="slider-item__icon"
                   src="../../assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-icon"
                 />
-                <p class="slider-item__text">Native to Southwest China</p>
+                <p class="slider-item__text">Native to South America</p>
               </div>
             </div>
             <div class="pets-slider__item slider-item">
@@ -132,13 +132,13 @@
                 alt="slider-img"
               />
               <div class="slider-item__inner">
-                <h4 class="slider-item__title">giant Pandas</h4>
+                <h4 class="slider-item__title">Gorillas</h4>
                 <img
                   class="slider-item__icon"
                   src="../../assets/icons/pets/banana-bamboo_icon.svg"
                   alt="slider-icon"
                 />
-                <p class="slider-item__text">Native to Southwest China</p>
+                <p class="slider-item__text">Native to Congo</p>
               </div>
             </div>
             <div class="pets-slider__item slider-item">
@@ -148,13 +148,13 @@
                 alt="slider-img"
               />
               <div class="slider-item__inner">
-                <h4 class="slider-item__title">giant Pandas</h4>
+                <h4 class="slider-item__title">Two-toed Sloth</h4>
                 <img
                   class="slider-item__icon"
                   src="../../assets/icons/pets/banana-bamboo_icon.svg"
                   alt="slider-img"
                 />
-                <p class="slider-item__text">Native to Southwest China</p>
+                <p class="slider-item__text">Mesoamerica, South America</p>
               </div>
             </div>
             <div class="pets-slider__item slider-item">
@@ -164,13 +164,13 @@
                 alt="slider-img"
               />
               <div class="slider-item__inner">
-                <h4 class="slider-item__title">giant Pandas</h4>
+                <h4 class="slider-item__title">cheetahs</h4>
                 <img
                   class="slider-item__icon"
                   src="../../assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
-                <p class="slider-item__text">Native to Southwest China</p>
+                <p class="slider-item__text">Native to Africa</p>
               </div>
             </div>
             <div class="pets-slider__item slider-item">
@@ -180,13 +180,13 @@
                 alt="slider-img"
               />
               <div class="slider-item__inner">
-                <h4 class="slider-item__title">giant Pandas</h4>
+                <h4 class="slider-item__title">Penguins</h4>
                 <img
                   class="slider-item__icon"
                   src="../../assets/icons/pets/meet-fish_icon.svg"
                   alt="slider-img"
                 />
-                <p class="slider-item__text">Native to Southwest China</p>
+                <p class="slider-item__text">Native to Antarctica</p>
               </div>
             </div>
           </div>
@@ -338,39 +338,46 @@
               </div>
             </div>
             <div class="testimonials__item">
-                <div class="testimonials__item-user item-user">
-                  <img
-                    class="item-user__icon"
-                    src="../../assets/icons/testemonials/item-user-icon-3.svg"
-                    alt="item-user-icon"
-                  />
-                  <div class="item-user__name">Oskar Samborsky</div>
-                  <div class="item-user__location">
-                    Local Austria
-                    <span class="item-user__date"> Yesterday </span>
-                  </div>
+              <div class="testimonials__item-user item-user">
+                <img
+                  class="item-user__icon"
+                  src="../../assets/icons/testemonials/item-user-icon-3.svg"
+                  alt="item-user-icon"
+                />
+                <div class="item-user__name">Oskar Samborsky</div>
+                <div class="item-user__location">
+                  Local Austria
+                  <span class="item-user__date"> Yesterday </span>
                 </div>
-                <p class="testimonials__item-text">
-                  Online zoo is one jf the ways to instill a love for
-                  animals.The best online zoo I’ve met. My son delighted very
-                  much ljves to watch gouillas. Online zoo is one jf the ways to
-                  instill a love for animals.The best online zoo I’ve met. My
-                  son delighted very much ljves to watch gouillas. The best
-                  online zoo Ive met. My son delighted very much ljves to watch
-                  gouillas. Online zoo is one jf the ways to instill a love for
-                  animals.The best online zoo I’ve met. My son delighted very
-                  much ljves to watch gouillas. Online zoo is one jf the ways to
-                  instill a love for animals. best online zoo Ive met. My son
-                  delighted very much ljves to watch gouillas. Online zoo is one
-                  jf the ways to instill a love for animals.The best online zoo
-                  I’ve met. My son delighted very much ljves to watch gouillas.
-                  Online zoo is one jf the ways to instill a love for animals.
-                </p>
               </div>
+              <p class="testimonials__item-text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo Ive met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals. best online zoo Ive met. My son delighted very much
+                ljves to watch gouillas. Online zoo is one jf the ways to
+                instill a love for animals.The best online zoo I’ve met. My son
+                delighted very much ljves to watch gouillas. Online zoo is one
+                jf the ways to instill a love for animals.
+              </p>
             </div>
-            <input class="testimonials__input" type="range">
-            <button class="testemonials__button button button-secondary">leave feedback</button>
           </div>
+          <input
+            class="testimonials__input"
+            min="0"
+            max="100"
+            value="0"
+            type="range"
+          />
+          <button class="testemonials__button button button-secondary">
+            leave feedback
+          </button>
         </div>
       </section>
     </main>
@@ -378,14 +385,20 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__wrapper">
-          <h2 class="foote__logo logo">PetStory online</h2>
+          <h2 class="footer__logo logo">PetStory online</h2>
           <form class="footer__form footer-form" action="submit">
             <div class="footer-form__title">Subscribe to our news</div>
-            <input class="footer-form__input" type="email" placeholder="Enter your email">
+            <input
+              class="footer-form__input"
+              type="email"
+              placeholder="Enter your email"
+            />
             <button class="footer-form__button">Submit</button>
           </form>
         </div>
-        <button class="footer__button button button-secondary">donate for volunteers</button>
+        <button class="footer__button button button-secondary">
+          donate for volunteers
+        </button>
         <div class="footer__inner footer-inner">
           <div class="footer-inner__contacts footer-contacts">
             <a class="footer-contacts__link facebook" href="#">Facebook</a>
@@ -396,20 +409,26 @@
           <nav class="footer__inner-navbar footer-navbar">
             <ul class="footer-navbar__items">
               <li class="footer-navbar__item">
-                <a class="foote-navbar__link" href="#">About</a>
+                <a class="foote-navbar__link navbar__link--active" href=""
+                  >About</a
+                >
               </li>
               <li class="footer-navbar__item">
-                <a class="foote-navbar__link" href="#">Map</a>
+                <a class="footer-navbar__link navbar__link" href="#">Map</a>
               </li>
               <li class="footer-navbar__item">
-                <a class="foote-navbar__link" href="#">Zoos</a>
+                <a class="footer-navbar__link navbar__link" href="#">Zoos</a>
               </li>
               <li class="footer-navbar__item">
-                <a class="foote-navbar__link" href="#">Contact us</a>
+                <a class="footer-navbar__link navbar__link" href="#"
+                  >Contact us</a
+                >
               </li>
             </ul>
           </nav>
-          <div class="footer-inner__copy footer-copy">Designed by Alisa Samborskaya <br>©RSSchool & ©Yem Digital 2021</div>
+          <div class="footer-inner__copy footer-copy">
+            Designed by Alisa Samborskaya <br />©RSSchool & ©Yem Digital 2021
+          </div>
         </div>
       </div>
     </footer>
