--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="../../assets/styles/normalize.css" />
     <link rel="stylesheet" href="../../assets/styles/variables.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../pages/style.css" />
     <title>Online-zoo</title>
   </head>
   <body>
